@@ -15,6 +15,10 @@
 	* as/z80/Makefile,
 	* link/z80/Makefile: removed, they have moved to
 	Makefile.in files
+	* configure,
+	* configure.in: replaced duplicate message about ucsim by missing sdcpp
+	* install-sh: fix bug #1204398 by setting umask 0022
+	* device/lib/Makefile: separate build of z80 and gbz80 lib
 
 2006-04-24 Bernhard Held <bernhard AT bernhardheld.de>
 
